<resources>
    <string name="app_name">Spider EditText</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Text Editor</string>
    <string name="inputtext">Text input</string>
    <string name="size">Size :</string>
    <string name="colour">Colour :</string>
    <string name="font">Font :</string>
    <string name="edittext">Edit Text</string>
    <string name="exit">Exit</string>
    <string name="title_activity_finalclass">finalclass</string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="finalText">Large Text</string>
    <string-array name="size_array">
        <item>10</item>
        <item>25</item>
        <item>35</item>
        <item>45</item>
        <item>70</item>
    </string-array>
    <string-array name="colour_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>White</item>
    </string-array>
</resources>
